CHANGES.txt - 09/06/2000
------------------------

CHANGES IN CUPS v1.1.3

	- Makefile fixes.
	- RPM spec file changes.
	- Documentation updates.
	- Enabled pstoraster debug messages for everything
	  (only logged when LogLevel set to "debug"...)
	- Changed the Input/OutputAttributes fix in
	  pstoraster so that it works on all platforms.
	- The HP-GL/2 filter didn't set the right green
	  color value in encoded polylines or text.
	- Updated the "fitplot" code to handle plot sizes
	  specified as "PSwidth,length" and "PSlength,width".
	- Updated the Linux parallel and USB backends to open
	  the device files prior to looking in /proc for
	  autoprobe info. This makes sure that loadable device
	  driver modules are in fact loaded...
	- Added new FilterLimit directive to limit the number
	  of processing jobs/filters on a system.
	- set-job-attributes didn't change the job-state to
	  held/pending when the job-hold-until attribute was
	  specified.
	- set-job-attributes didn't save the new job attributes.
	- Now change the "requesting-user-name" attribute in
	  requests from remote systems to "remroot" when an
	  unauthenticated "root" user is sent. This can be
	  changed using the new RemoteRoot directive in
	  cupsd.conf.
	- The cancel-job, hold-job, release-job, and restart-job
	  operations didn't log the authenticated username.
	- The cups-lpd mini-daemon now checks for a
	  document-format option before forcing raw mode with
	  filter mode 'l'.
	- The cups-lpd mini-daemon now supports "-o" options
	  on the command-line (passed by inetd) to set global
	  defaults for all print queues.
	- The pstops filter assumed that a file with a Trailer
	  comment would also have an EOF comment.
	- Added new cupsSetPasswordCB(), cupsSetServer(),
	  cupsSetUser(), and ippSetPort() functions to better
	  support client applications (especially GUIs...)
	- The CUPS-add-class and CUPS-add-printer operations
	  didn't reset the printer-name attribute on remote